# qt-media-player

./: README.md
media_player/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videowidget.cpp  videowidget.h
